<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fortune Unlock</string>
    <string name="app_desc">
        Display a random fortune every time you unlock your phone!
        \n
        \nAll fortunes come from the Unix program fortune-mod.
        \n
        \nThere are currently two themes available for the fortunes:
        a standard fortune cookie and a theme modeled after the Xbox 360
        achievement unlocked notification.
    </string>
    <string name="pref_key_name">AchievePrefs</string>
    <string name="pref_location">location</string>
    <string name="pref_enabled">enabled</string>
    <string name="pref_theme">theme</string>
    <string name="pref_offset">offset</string>
    <string name="pref_offset_x">offset_X</string>
    <string name="pref_offset_y">offset_Y</string>
    <string name="pref_btn_test">PrefBtnTest</string>
    <string name="pref_btn_add">PrefBtnAdd</string>
    <string name="pref_btn_import">PrefBtnImport</string>
    <string name="pref_btn_builtin">PrefBtnBuiltIn</string>
    <string name="pref_btn_export">PrefBtnExport</string>
    <string name="pref_btn_about">PrefBtnAbout</string>
    <string name="pref_btn_clear">PrefBtnClear</string>

        <string name="title_achieve">ACHIEVEMENT UNLOCKED\n</string>
        <string name="title_fortune">Confucius says:\n</string>
        
    <string-array name="pref_theme_entries">
        <item>Fortune Cookie</item>
        <item>Achievement</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>fortune</item>
        <item>achievement</item>
    </string-array>
    
    <string-array name="pref_location_entries">
        <item>Default</item>
        <item>Top</item>
        <item>Bottom</item>
        <item>Left</item>
        <item>Right</item>
        <item>Center</item>
    </string-array>
    <string-array name="pref_location_values">
        <item>Default</item>
        <item>Top</item>
        <item>Bottom</item>
        <item>Left</item>
        <item>Right</item>
        <item>Center</item>
    </string-array>
    <string name="about_text">
        This program displays a random fortune when the user unlocks
        the phone. These fortunes are taken from files that are also
        used for the Unix program fortune-mod. For details on the
        fortune-mod program see
        http://en.wikipedia.org/wiki/Fortune_(Unix) .
        \n
      	\nAuthors: Andrew Nagle, Tim Pearce
        \n
        \nThis program is distributed under the terms of the GNU General Public License, version 3:
        http://www.gnu.org/licenses/gpl-3.0.html
        \nSource available at: http://github.com/kabili207/Droid-Achievement</string>
    <string name="prompt_fortune">Enter fortune</string>

</resources>